# Cornwall-Waste-Collection-Calendar-Generator

./: .env.example  .gitignore  README.md  cornwall_collection.ics  cornwall_collection.py  pyproject.toml
.github/workflows/: scrape.yml
